--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
     ]
   },
   "dependencies": {
+    "@codemirror/autocomplete": "^6.4.0",
+    "@codemirror/commands": "^6.1.3",
+    "@codemirror/state": "^6.2.0",
+    "@codemirror/theme-one-dark": "^6.1.0",
+    "@codemirror/view": "^6.7.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
