--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   "dependencies": {
     "@codemirror/autocomplete": "^6.4.0",
     "@codemirror/commands": "^6.1.3",
+    "@codemirror/lang-markdown": "^6.0.5",
+    "@codemirror/language": "^6.4.0",
     "@codemirror/state": "^6.2.0",
     "@codemirror/theme-one-dark": "^6.1.0",
     "@codemirror/view": "^6.7.3",
+    "@lezer/highlight": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
