--- a/package.json
+++ b/package.json
@@ -26,7 +26,12 @@
     "@codemirror/view": "^6.7.3",
     "@lezer/highlight": "^1.1.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "rehype-react": "^7.1.1",
+    "rehype-stringify": "^9.0.3",
+    "remark-gfm": "^3.0.1",
+    "remark-parse": "^10.0.1",
+    "remark-rehype": "^10.1.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
