--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "dev": "rimraf dist && run-p dev:webpack dev:electron",
     "build": "cross-env NODE_ENV=\"production\" webpack --progress",
     "dev:webpack": "cross-env NODE_ENV=\"development\" webpack --progress",
-    "dev:electron": "wait-on ./dist/index.html ./dist/main.js && electronmon ."
+    "dev:electron": "wait-on ./dist/index.html ./dist/main.js && electronmon .",
+    "package": "npm run build && electron-builder build --publish never",
+    "package-win": "npm run build && electron-builder build --win --x64",
+    "package-linux": "npm run build && electron-builder build --linux",
+    "package-mac": "npm run build && electron-builder build --mac"
   },
   "electronmon": {
     "patterns": [
@@ -40,6 +44,7 @@
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.3",
     "electron": "^22.0.2",
+    "electron-builder": "^23.6.0",
     "electronmon": "^2.0.2",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.7.2",
@@ -51,5 +56,39 @@
     "wait-on": "^7.0.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
+  },
+  "build": {
+    "productName": "Markdown Previewer App",
+    "appId": "com.iamwuwei.markdown.previewer/",
+    "files": [
+      "dist/",
+      "node_modules/",
+      "resources/**/*",
+      "native/",
+      "package.json"
+    ],
+    "mac": {
+      "category": "public.app-category.developer-tools",
+      "target": "dmg",
+      "icon": "./resources/icons/mac/icon.icns"
+    },
+    "dmg": {
+      "backgroundColor": "#ffffff",
+      "icon": "./resources/icons/mac/icon.icns",
+      "iconSize": 80,
+      "title": "Markdown Previewer App"
+    },
+    "win": {
+      "target": [ "nsis", "msi" ]
+    },
+    "linux": {
+      "icon": "./resources/icons/app.png",
+      "target": [ "deb", "rpm", "AppImage" ],
+      "category": "Development"
+    },
+    "directories": {
+      "buildResources": "resources",
+      "output": "release"
+    }
   }
 }
