--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "@codemirror/theme-one-dark": "^6.1.0",
     "@codemirror/view": "^6.7.3",
     "@lezer/highlight": "^1.1.3",
+    "github-markdown-css": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rehype-react": "^7.1.1",
     "rehype-stringify": "^9.0.3",
     "remark-gfm": "^3.0.1",
+    "remark-math": "^5.1.1",
     "remark-parse": "^10.0.1",
     "remark-rehype": "^10.1.0"
   },
@@ -79,11 +81,18 @@
       "title": "Markdown Previewer App"
     },
     "win": {
-      "target": [ "nsis", "msi" ]
+      "target": [
+        "nsis",
+        "msi"
+      ]
     },
     "linux": {
       "icon": "./resources/icons/app.png",
-      "target": [ "deb", "rpm", "AppImage" ],
+      "target": [
+        "deb",
+        "rpm",
+        "AppImage"
+      ],
       "category": "Development"
     },
     "directories": {
